added comments to code

--- a/mean-experiments.ipynb
+++ b/mean-experiments.ipynb
@@ -25,6 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#utility functions used in the paper\n",
+    "\n",
     "def bayes_utilities(betas, lams, rho, tau):\n",
     "    Gamma = betas.sum()\n",
     "    gammas = Gamma - betas\n",
@@ -47,6 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#simple grid search for acceptable privacy parameters\n",
+    "\n",
     "def grid_search_best_beta(\n",
     "    weights_fn, utility_fn, lams, rho, grid_size=100, eps=1e-8, **params\n",
     "):\n",
@@ -65,6 +69,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#privacy scale weights from Theorems 4.2 and 4.9\n",
+    "\n",
     "def simple_weights(lams, rho, **kwargs):\n",
     "    return np.ones_like(lams)\n",
     "\n",
@@ -85,6 +91,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Figure 1 experiment\n",
+    "\n",
     "def compare_accs_experiment(\n",
     "    tries, rho,\n",
     "    lams_fn,\n",
@@ -152,6 +160,8 @@
     }
    ],
    "source": [
+    "#computing results for the upper part of Figure 1\n",
+    "\n",
     "#dp parameters\n",
     "B = 20.0\n",
     "kappa = (2 * np.log(1.25 * n**2))**0.5 * B / n\n",
@@ -205,6 +215,8 @@
     }
    ],
    "source": [
+    "#computing results for the lower part of Figure 1\n",
+    "\n",
     "#bayes parameters\n",
     "tau = 1.0\n",
     "\n",
@@ -242,6 +254,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#plot results\n",
+    "\n",
     "plt.close()\n",
     "\n",
     "fig, axes = plt.subplots(2, 1)\n",
